<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/first_menu"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/ic_add"
        android:title="@string/second_menu" />
    <item
        android:id="@+id/menu_fertil"
        android:icon="@drawable/ic_fertil"
        android:title="@string/menu_fertil" />
    <item
        android:id="@+id/menu_gallery"
        android:icon="@drawable/ic_plant"
        android:title="@string/third_menu" />
    <item
        android:id="@+id/menu_info"
        android:icon="@drawable/ic_info"
        android:title="@string/fourth_menu" />
</menu>